# py_libsudoku

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  demo.py  demo_board.py  demo_generator.py  demo_solver.py  setup.py  tox.ini
src/: py_libsudoku.cpp
src/tests/: test_board.py  test_solver.py
